--- a/src/style.css
+++ b/src/style.css
@@ -371,6 +371,14 @@ body.dark ::-webkit-scrollbar-thumb {
 .limitedness input.maze-size {
   width: 100%;
 }
+input.calm-mode {
+  width: 2rem;
+  height: 3rem;
+  position: relative;
+  top: 1.1rem;
+  margin-right: 1rem;
+}
+
 .maze-size-tip {
   font-style: italic;
 }
